--- a/src/core/packages/chrome/sidebar/docs/sidebar.mdx
+++ b/src/core/packages/chrome/sidebar/docs/sidebar.mdx
@@ -16,20 +16,35 @@ Sidebar apps are global and can stay open across navigation and page reloads.
 
 ## Register a sidebar app
 
-Register apps during the plugin `setup()` phase. Each app provides an async component loader and can optionally define a Zod params schema for persisted state.
+Register apps during the plugin `setup()` phase. Each app provides an async component loader and can optionally define a store for state management.
 
 Before registering, confirm the `appId` is allowed. Valid app ids are restricted and new ones should be added only after discussing with the UX team.
 
 ```tsx
 import { z } from '@kbn/zod/v4';
+import { createSidebarStore } from '@kbn/core-chrome-sidebar';
+
+const mySidebarStore = createSidebarStore({
+  schema: z.object({
+    userName: z.string().default(''),
+    count: z.number().default(0),
+  }),
+  actions: (set, get, { open, close }) => ({
+    openWithUser: (userName: string) => {
+      set({ userName });
+      open();
+    },
+    increment: () => set((s) => ({ count: s.count + 1 })),
+    submitAndClose: async () => {
+      await doSomething(get());
+      close();
+    },
+  }),
+});
 
 core.chrome.sidebar.registerApp({
   appId: 'mySidebarApp',
-  getParamsSchema: () =>
-    z.object({
-      userName: z.string().default(''),
-      count: z.number().default(0),
-    }),
+  store: mySidebarStore,
   loadComponent: () => import('./my_sidebar_app').then((m) => m.MySidebarApp),
   status: 'accessible',
 });
@@ -40,74 +55,183 @@ Required fields:
 - `loadComponent`: Async function that resolves the sidebar React component.
 
 Optional fields:
-- `getParamsSchema`: Zod schema for params (persisted state). If omitted, `params` is `{}` and `setParams()` throws.
+- `store`: Store created via `createSidebarStore`. State persists to localStorage.
 - `status`: Accessibility status (defaults to `accessible`).
 - `restoreOnReload`: Whether the app auto-reopens on page reload (defaults to `true`).
 
 ## Build a sidebar app component
 
-Sidebar components receive `params`, `setParams`, and `onClose`.
+Sidebar components receive `state`, `actions`, and `onClose` (when using a store) or just `onClose` (stateless apps).
 Use the shared layout components to align with Kibana styling.
 
 ```tsx
-import { z } from '@kbn/zod/v4';
 import type { SidebarComponentProps } from '@kbn/core-chrome-sidebar';
 import { SidebarHeader, SidebarBody } from '@kbn/core-chrome-sidebar-components';
 
-const getMyParamsSchema = () =>
-  z.object({
-    count: z.number().default(0),
-  });
-
-type MyParams = z.infer<ReturnType<typeof getMyParamsSchema>>;
+// Infer types from your store
+type MyState = typeof mySidebarStore.types.state;
+type MyActions = typeof mySidebarStore.types.actions;
 
 export function MySidebarApp({
-  params,
-  setParams,
+  state,
+  actions,
   onClose,
-}: SidebarComponentProps<MyParams>) {
+}: SidebarComponentProps<MyState, MyActions>) {
   return (
     <>
       <SidebarHeader title="My App" onClose={onClose} />
       <SidebarBody>
-        <button onClick={() => setParams({ count: params.count + 1 })}>
-          Count: {params.count}
+        <p>User: {state.userName}</p>
+        <button onClick={actions.increment}>
+          Count: {state.count}
         </button>
+        <button onClick={actions.submitAndClose}>Submit</button>
       </SidebarBody>
     </>
   );
 }
 ```
 
-For apps without params, omit `getParamsSchema` and use internal React state instead. If you do that, consider `restoreOnReload: false`.
+### Type inference
 
-## Params system (optional)
+Extract state and action types from your store using `typeof store.types`. This keeps types in sync with your schema and actions:
 
-Params are a persisted, validated state layer:
-- Persisted to `localStorage` and restored on reload.
-- Accessible outside the sidebar component via the app-bound API.
-- Validated and typed through Zod.
+```tsx
+// Define store
+const mySidebarStore = createSidebarStore({ schema, actions });
+
+// Extract types for use in components
+type MyState = typeof mySidebarStore.types.state;
+type MyActions = typeof mySidebarStore.types.actions;
+
+// Use with SidebarComponentProps
+function MyComponent(props: SidebarComponentProps<MyState, MyActions>) { ... }
+```
+
+### Stateless apps
+
+For simple sidebar apps that don't need persisted state, omit the `store` property. The component receives only `onClose`:
+
+```tsx
+import type { SidebarComponentProps } from '@kbn/core-chrome-sidebar';
+import { SidebarHeader, SidebarBody } from '@kbn/core-chrome-sidebar-components';
+
+// Register without store
+core.chrome.sidebar.registerApp({
+  appId: 'helpPanel',
+  restoreOnReload: false,
+  loadComponent: () => import('./help_panel').then((m) => m.HelpPanel),
+});
+
+// Component receives only onClose
+export function HelpPanel({ onClose }: SidebarComponentProps) {
+  return (
+    <>
+      <SidebarHeader title="Help" onClose={onClose} />
+      <SidebarBody>
+        <p>Documentation and support resources.</p>
+      </SidebarBody>
+    </>
+  );
+}
+```
+
+Use internal React state (`useState`) for ephemeral UI that doesn't need to survive page reloads. Set `restoreOnReload: false` to prevent the sidebar from reopening with empty state.
+
+## Store and actions
+
+Stores provide a persisted, validated state layer with custom actions:
+- State persists to `localStorage` and restores on reload.
+- Actions can control sidebar visibility via the `sidebar` context.
+- State is accessible outside the component via the app-bound API.
+- Validated and typed through Zod schemas.
+
+### Creating a store
+
+```tsx
+import { z } from '@kbn/zod/v4';
+import { createSidebarStore } from '@kbn/core-chrome-sidebar';
+
+const store = createSidebarStore({
+  schema: z.object({
+    conversationId: z.string().default(''),
+    messages: z.array(z.string()).default([]),
+  }),
+  actions: (set, get, { open, close, isCurrent }) => ({
+    // Action that opens the sidebar with state
+    openConversation: (id: string) => {
+      set({ conversationId: id, messages: [] });
+      open();
+    },
+    addMessage: (msg: string) => set((s) => ({ 
+      messages: [...s.messages, msg] 
+    })),
+    closeIfCurrent: () => {
+      if (isCurrent()) close();
+    },
+  }),
+});
+```
+
+The actions factory receives three arguments:
+- `set`: Update state (partial object or updater function)
+- `get`: Read current state
+- `sidebar`: Control sidebar visibility (`open`, `close`, `isCurrent`)
+
+### Async actions with error handling
+
+Async actions work naturally. Use try/catch to handle errors and update loading/error state:
+
+```tsx
+const store = createSidebarStore({
+  schema: z.object({
+    data: z.string().nullable().default(null),
+    loading: z.boolean().default(false),
+    error: z.string().nullable().default(null),
+  }),
+  actions: (set, get, { close }) => ({
+    saveData: async () => {
+      set({ loading: true, error: null });
+      try {
+        await api.save(get().data);
+        close();
+      } catch (e) {
+        set({ loading: false, error: e.message });
+      }
+    },
+  }),
+});
+```
+
+### Accessing state externally
 
 ```tsx
 const myApp = core.chrome.sidebar.getApp('mySidebarApp');
 
-myApp.open({ userName: 'John' });
-myApp.setParams({ count: 5 });
+// Call actions to open with state
+myApp.actions.openConversation('abc-123');
 
-const params = myApp.getParams();
-myApp.getParams$().subscribe((next) => {
-  console.log('Params changed:', next);
+// Read state
+const state = myApp.getState();
+myApp.getState$().subscribe((next) => {
+  console.log('State changed:', next);
 });
 ```
 
 ## Open and close the sidebar
 
-Use the app-bound API during the plugin `start()` phase.
+Use the app-bound API during the plugin `start()` phase. Open the sidebar via actions to set initial state:
 
 ```tsx
 const myApp = core.chrome.sidebar.getApp('mySidebarApp');
 
-myApp.open({ userName: 'John' });
+// Open with state via action
+myApp.actions.openConversation('abc-123');
+
+// Open with default state
+myApp.open();
+
+// Close
 myApp.close();
 
 const isOpen = core.chrome.sidebar.isOpen();
@@ -125,8 +249,11 @@ function MyToolbarButton() {
 
   return (
     <>
-      <button onClick={() => myApp.open({ userName: 'John' })}>
-        Open sidebar
+      <button onClick={() => myApp.actions.openConversation('abc-123')}>
+        Open with conversation
+      </button>
+      <button onClick={myApp.open}>
+        Open with defaults
       </button>
       {isOpen && <button onClick={close}>Close sidebar</button>}
     </>
@@ -223,8 +350,21 @@ Pass `scrollable` to make `SidebarBody` keyboard-scrollable (`tabIndex={0}`) and
 </SidebarBody>
 ```
 
+## Design rationale
+
+The sidebar uses a store-based architecture rather than a simple `openSidebar(component)` API for three reasons:
+
+**Core controls lifecycle.** The sidebar persists across Kibana app navigation and survives page reloads. Core decides when to restore the sidebar - plugins provide state, core manages when and how it's used.
+
+**Consistency across apps.** All sidebar apps follow the same state management pattern. This makes apps predictable: state is always validated, persisted, and accessible the same way.
+
+**Cross-plugin access without circular dependencies.** Any plugin can call `sidebar.getApp('chat').actions.open()` without importing the chat plugin. State and actions are accessible through core, avoiding dependency cycles.
+
 ## Best practices
 
 - Wrap sidebar operations in your plugin contract or a custom hook, instead of exposing the raw sidebar API.
-- Use params for state that must survive navigation or reloads; use component state for ephemeral UI.
+- Use store state for data that must survive navigation or reloads; use component state for ephemeral UI.
+- Define actions for all state mutations - this keeps state changes predictable and testable.
+- Use sidebar context (`open`, `close`) in actions to couple state changes with visibility control.
 - Prefer `SidebarHeader` and `SidebarBody` for consistent layout and spacing.
+- Set `restoreOnReload: false` for stateless apps to prevent the sidebar from reopening with empty state after page reload.
